kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-Ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprop.shop
    http:
      paths:
      - path: /
      pathType: Prefix
      backend:
        service:
          name: vproapp-service
          port:
            number: 8080
